--- a/Source/Directory.Build.props
+++ b/Source/Directory.Build.props
@@ -70,7 +70,7 @@
   <ItemGroup Condition="'$(ProjectName)' != 'SmallBasic.Analyzers'">
     <!-- Custom Analyzers -->
     <ProjectReference Include="$(RootDirectory)\Source\SmallBasic.Analyzers\SmallBasic.Analyzers.csproj" />
-    <Analyzer Include="$(RootDirectory)\Source\SmallBasic.Analyzers\bin\$(Configuration)\netstandard2.0\SmallBasic.Analyzers.dll" />
+    <Analyzer Include="$(RootDirectory)\Source\SmallBasic.Analyzers\bin\$(Configuration)\net9.0\SmallBasic.Analyzers.dll" />
   </ItemGroup>
 
 </Project>
