--- a/Source/SmallBasic.Client/SmallBasic.Client.csproj
+++ b/Source/SmallBasic.Client/SmallBasic.Client.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk" DefaultTargets="Build">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>net9.0</TargetFramework>
     <WebPackOutputPath>$(RootDirectory)\Source\SmallBasic.Editor\wwwroot</WebPackOutputPath>
   </PropertyGroup>
 
@@ -17,9 +17,33 @@
     <WebpackInput Remove="node_modules\**\*.*" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Update="Microsoft.CodeAnalysis.Analyzers" Version="3.11.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Update="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="3.3.2">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Update="Microsoft.Extensions.Localization" Version="9.0.9" />
+    <PackageReference Update="Microsoft.NetCore.Analyzers" Version="3.3.2">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Update="StyleCop.Analyzers" Version="1.1.118">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Update="Text.Analyzers" Version="3.3.4">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
   <Target Name="WebPackRestore" Inputs="package.json" Outputs="obj\package.json">
     <Message Importance="high" Text="Restoring nodejs packages for project $(MSBuildProjectName)" />
-    <Exec Command="yarn" WorkingDirectory="$(MSBuildProjectDirectory)" />
+    <!--<Exec Command="yarn" WorkingDirectory="$(MSBuildProjectDirectory)" />-->
     <Copy SourceFiles="package.json" DestinationFiles="obj\package.json" />
   </Target>
 
